# aconnection

./: CHANGELOG.md  LICENSE  Makefile  README.md  pyproject.toml
.github/workflows/: build.yml  publish.yml  release.yml
aconnection/: async_connectable.py
connectable/: __init__.py  async_connectable.py  sync_connectable.py
connected/: sync_connectable.py
tests/: sync_connectable.py  test_async_connectable.py  test_sync_connectable.py
